--- a/website-v2/src/pages/index.module.css
+++ b/website-v2/src/pages/index.module.css
@@ -1,23 +1,78 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
-.heroBanner {
-    padding: 4rem 0;
+.homeContainer {
     text-align: center;
     position: relative;
-    overflow: hidden;
 }
 
-@media screen and (max-width: 996px) {
-    .heroBanner {
-        padding: 2rem;
+.homeSplashFade {
+    background: var(--ifm-color-primary);
+    color: white;
+}
+
+.homeWrapper {
+    padding: 2rem;
+}
+
+.ProjectTitle {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    color: white;
+}
+
+.ProjectTitle-copy {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: normal;
+    margin: 1rem 0;
+}
+
+.GettingStartedButton {
+    display: inline-block;
+    border: 2px solid white;
+    border-radius: 3px;
+    color: white;
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.GettingStartedButton:hover {
+    background: white;
+    color: var(--ifm-color-primary);
+    text-decoration: none;
+}
+
+.TextlintFeature {
+    text-align: center;
+    padding: 4rem 0;
+}
+
+.getStartedFlexContainer {
+    display: flex;
+    flex-flow: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 2rem 0;
+}
+
+@media screen and (max-width: 768px) {
+    .getStartedFlexContainer {
+        flex-direction: column;
     }
 }
 
-.buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.GettingStarted-steps {
+    flex: 1;
+    padding-right: 2rem;
+}
+
+.GettingStarted-images {
+    flex: 1;
+}
+
+.getStartedStep {
+    margin: 1rem 0;
+    padding: 1rem;
+    background: var(--ifm-code-background);
+    border-radius: 3px;
 }
